Revise 'Auditoria Blindada' description in index.html
Updated the description for 'Auditoria Blindada' feature card.

--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
                 <div class="feature-card">
                     <i class="fas fa-shield-halved feature-icon"></i>
                     <h3>Auditoria Blindada</h3>
-                    <p>Controle rigoroso de falhas, "calhaus" e compensações. Garanta que o que foi vendido foi
+                    <p>Auditoria em um patamar profissional de "Quality Assurance", controle rigoroso de falhas, "calhaus" e compensações. Garanta que o que foi vendido foi
                         entregue.</p>
                 </div>
             </div>
