Adjust hero section padding for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -684,6 +684,10 @@
         }
 
         @media (max-width: 768px) {
+            .hero {
+            padding: 150px 0 125px;
+            }
+            
             .hero h1 {
                 font-size: 36px;
             }
